force-app/main/default/objects/Order_Event__e/Order_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event published in the source org when an order is created or updated. Subscribed to by subscriber.js via CometD, which writes each received payload to Integration_Log__c in this org.</description>
    <label>Order Event</label>
    <pluralLabel>Order Events</pluralLabel>
</CustomObject>