force-app/main/default/objects/Order_Event__e/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>